# ajazzdesktopify

./: .gitignore  Cargo.toml  README.md  analyze_rgb_table.ps1  build.rs  intercept_webhid.js  tables_dump.txt
autogen/: dispatcher.c  firmware_reversed.c  led_update.c  reload_config.c
docs/: 01_create_segments.py  02_name_addresses.py  03_add_types.py  04_find_hw_references.py  05_find_lowflash_calls.py  06_find_adc_constants.py  07_find_strings.py  08_list_functions.py  flash_layout.txt  ida_scripts.py  protocol_map.md
ps1/: 2link.ps1  analyze_firmware.ps1  dump_tables.ps1  merge_dumps.ps1
src/: all_code.txt  code.ps1  lib.rs  main.rs
src/device/: connection.rs  mod.rs
src/model/: key.rs  keyboard.rs  layer.rs  mod.rs
src/protocol/: commands.rs  key_list.rs  layout.rs  mod.rs  packet.rs  rgb_commands.rs  win_hid.rs
src/shaders/: ui.frag  ui.vert
src/ui/: app.rs  draw.rs  input.rs  mod.rs  text.rs  theme.rs  vulkan.rs  widgets.rs
