[package]
name = "ajazzdesktopify"
version = "0.1.0"
edition = "2021"


[dependencies]
ash = "0.38"
fontdue = "0.9"
crossbeam-channel = "0.5"
env_logger = "0.11"
hidapi = "2.6"
log = "0.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[lib]
name = "ak680max_driver"
path = "src/lib.rs"

[[bin]]
name = "ak680-probe"
path = "src/bin/probe.rs"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
] }